Fix: pruebas unitarias y correcciones Sonar